--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,7 @@
 {{page-title "Index"}}
 test
 <ul>
-{{#each model as |post|}}
+{{#each @model as |post|}}
 <li>{{post.title}}</li>
 {{/each}}
 </ul>
