update functionality added :)

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,10 +4,11 @@ test
 {{#each @model as |blog|}}
 {{!-- previously it used to be
 {{#link-to "blog" post.id}} --}}
-<LinkTo @route="blog" @model="{{blog.id}}">
+<LinkTo @route="blog" @model={{blog.id}}>
 <li>{{blog.title}}</li>
 </LinkTo>
 <button type="button" onclick={{action "deletePost" blog}}>Delete</button>
+<LinkTo @route="edit" @model={{blog.id}}>Edit</LinkTo>
 {{/each}}
 </ul>
 {{outlet}}
