--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,6 @@
 {{page-title "BlogClient"}}
-<LinkTo @route="create">Write a Post</LinkTo>
+<nav>
+<LinkTo @route="index">Home</LinkTo>
+<LinkTo @route="create">Write a Blog</LinkTo>
+</nav>
 {{outlet}}
