--- a/app/templates/edit.hbs
+++ b/app/templates/edit.hbs
@@ -1,13 +1,13 @@
 {{page-title "Edit"}}
-<form onsubmit={{action "editPost" }}>
-    <div>
-    <label for="title">Title</label>
-    <Input id="title" @value={{@model.title}} />
+<form onsubmit={{action "editPost" }} style="width: 70%;" class="mx-auto">
+    <div class="mb-3">
+    <label for="title" class="form-label">Title</label>
+    <Input id="title" @value={{@model.title}} class="form-control"/>
   </div>
-  <div>
-    <label for="body">Body</label>
-    <Textarea rows="8" cols="80" id="body" @value={{@model.body}} />
+  <div class="mb-3">
+    <label for="body" class="form-label">Body</label>
+    <Textarea class="form-control" rows="8" cols="80" id="body" @value={{@model.body}} />
   </div>
-  <button type="submit">Update</button>
+  <button type="submit" class="btn btn-primary">Update</button>
 </form>
 {{outlet}}
